Wed May 26 16:24:54 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/Core/Deployment.idl

          Modified the IDL interface of the DomainApplicationManager, 
          which now integrates the functionality of both 
          DomainApplicationManager and DomainApplication in the original
          DnC spec. The old DomainApplication interface is deleted.

Wed May 26 11:33:11 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/Core/CCM_Core.mpc

          Added necessary library (TAO_Valuetype) to the Deployment_stub
          project. Removed the unnecessary Deployment_CoreC.cpp file which
          caused linking error.

Wed May 26 11:15:23 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/Core/NodeApplication_Impl.cpp

          Fixed linking errors because the "start" method on the
          NodeApplication used a wrong function signature.

Wed May 26 11:06:23 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/DomainApplicationManager/DomainApplicationManager.mpc
        * DnC/DomainApplicationManager/Deployment_Configuration.inl

          Added these two files.

Wed May 26 11:03:23 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/Core/CCM_Core.mpc

          Fixed typo in this mpc file.

Wed May 26 10:14:23 2004  Gan Deng  <dengg@dre.vanderbilt.edu>

	* DnC/DomainApplicationManager/DomainApplicationManager_Impl.*

          Fixed the compiling errors. More functinality will be
          added soon.

        * DnC/DomainApplicationManager/Deployment_Configuration.*

          Added this helper class to deal with deployment topology
          data file.


Tue May 25 22:40:23 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/Core/NodeApp_CB_Impl.cpp:
	* DnC/Core/NodeApp_CB_Impl.h:
	* DnC/Core/NodeApplication_CallBack.idl:
	  Added these files for NodeApplication callback interface.

	* DnC/Core/CCM_Core.mpc:
	  Updated the file to reflect above changes.

Tue May 25 13:05:35 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/Deployment.idl:
	* DnC/Property.idl: